--- a/cards/card1.Rmd
+++ b/cards/card1.Rmd
@@ -2,7 +2,14 @@
 title: "card1"
 author: "DISPLAY Lab"
 date: "2020-03-20"
-output: pdf_document
+mainfont: LiberationSerif
+sansfont: LiberationSans
+monofont: LiberationMono
+output: 
+  html_document:
+    theme: readable
+  pdf_document:
+    latex_engine: xelatex
 ---
 
 ```{r setup, include=FALSE}
@@ -18,7 +25,7 @@ data <- pictoralist::read_data('synth_data.csv')
 recipient <- 'p1'
 ```
 
-**To:** You (Anesthesia Provider)@yourhospital.com
+**To:** Shah, Nirav <nirshah@med.umich.edu>
 
 **From:** mpog-quality@med.umich.edu
 
@@ -27,7 +34,7 @@ recipient <- 'p1'
 \  
 \  
 
-Dear Dr. X,
+Dear Dr. Shaw,
 
 You exceeded the peer average for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
@@ -41,5 +48,3 @@ You exceeded the peer average for the measure of [postoperative nausea and vomit
 Sincerely,
 
 The MPOG Quality Team
-
-
