--- a/cards/card3.Rmd
+++ b/cards/card3.Rmd
@@ -2,7 +2,14 @@
 title: "card3"
 author: "DISPLAY Lab"
 date: "2020-03-20"
-output: pdf_document
+mainfont: LiberationSerif
+sansfont: LiberationSans
+monofont: LiberationMono
+output: 
+  html_document:
+    theme: readable
+  pdf_document:
+    latex_engine: xelatex
 ---
 
 ```{r setup, include=FALSE}
@@ -13,13 +20,12 @@ knitr::opts_chunk$set(echo = TRUE)
 card_env <- new.env()
 source(file='card3.R', local=card_env)
 
-# Load data and define recipient
-# Use same performer as card 2
+# Load data and define recipient (Use same performer as card 2)
 data <- pictoralist::read_data('synth_data.csv')
 recipient <- 'p2'
 ```
 
-**To:** You (Anesthesia Provider)@yourhospital.com
+**To:** Shah, Nirav <nirshah@med.umich.edu>
 
 **From:** mpog-quality@med.umich.edu
 
@@ -28,7 +34,7 @@ recipient <- 'p2'
 \  
 \  
 
-Dear Dr. X,
+Dear Dr. Shaw,
 
 You are performing above the peer average for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
