--- a/cards/card06.Rmd
+++ b/cards/card06.Rmd
@@ -1,15 +1,15 @@
 ---
-title: "card2"
+title: "card 6"
 author: "DISPLAY Lab"
-date: "2020-03-20"
+date: "2020-03-23"
 mainfont: LiberationSerif
 sansfont: LiberationSans
 monofont: LiberationMono
 output: 
-  html_document:
-    theme: readable
   pdf_document:
     latex_engine: xelatex
+  html_document:
+    theme: readable
 ---
 
 ```{r setup, include=FALSE}
@@ -18,27 +18,25 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Load the source code for the figure
 card_env <- new.env()
-source(file='card2.R', local=card_env)
+source(file='fig_single_bar.R', local=card_env)
 
 # Load data and define recipient
 data <- pictoralist::read_data('synth_data.csv')
-recipient <- 'p2'
+recipient <- 'p5'
 ```
 
 **To:** Shah, Nirav <nirshah@med.umich.edu>
 
 **From:** mpog-quality@med.umich.edu
 
-**Subject:** You have reached the goal for PONV 03
+**Subject:** You are below the goal for PONV 03
 
 \  
 \  
 
 Dear Dr. Shaw,
 
-You reached the goal for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
-
-\ 
+You fell below the goal for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
 ```{r figuregen, echo=FALSE, fig.align='center', fig.width=5, fig.height=3, fig.showtext=TRUE}
   # Run figure generation
