--- a/cards/card03.Rmd
+++ b/cards/card03.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "card 3"
+title: "email card 3"
 author: "DISPLAY Lab"
-date: "2020-03-23"
+date: "2020-03-28"
 mainfont: LiberationSerif
 sansfont: LiberationSans
 monofont: LiberationMono
@@ -25,18 +25,18 @@ data <- pictoralist::read_data('synth_data.csv')
 recipient <- 'p2'
 ```
 
-**To:** Shah, Nirav <nirshah@med.umich.edu>
+**To:** Anesthetic, Jane \<dranesthetic@med.example.com\>
 
 **From:** mpog-quality@med.umich.edu
 
-**Subject:** You have exceeded the peer average for PONV 03
+**Subject:** You are a top performer for PONV 03
 
 \  
 \  
 
-Dear Dr. Shaw,
+Dear Dr. Anesthetic,
 
-You are performing above the peer average for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+You are a top performer for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
 \ 
 
