--- a/cards/card14.Rmd
+++ b/cards/card14.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "card 14"
+title: "email card 14"
 author: "DISPLAY Lab"
-date: "2020-03-23"
+date: "2020-03-28"
 mainfont: LiberationSerif
 sansfont: LiberationSans
 monofont: LiberationMono
@@ -25,7 +25,7 @@ data <- pictoralist::read_data('synth_data.csv')
 recipient <- 'p13'
 ```
 
-**To:** Shah, Nirav <nirshah@med.umich.edu>
+**To:** Anesthetic, Jane \<dranesthetic@med.example.com\>
 
 **From:** mpog-quality@med.umich.edu
 
@@ -34,9 +34,9 @@ recipient <- 'p13'
 \  
 \  
 
-Dear Dr. Shaw,
+Dear Dr. Anesthetic,
 
-Your performance has not improved toward the goal for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+Your performance has not improved for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
 \ 
 
