--- a/cards/card06.Rmd
+++ b/cards/card06.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "card 6"
+title: "email card 6"
 author: "DISPLAY Lab"
-date: "2020-03-23"
+date: "2020-03-28"
 mainfont: LiberationSerif
 sansfont: LiberationSans
 monofont: LiberationMono
@@ -25,18 +25,18 @@ data <- pictoralist::read_data('synth_data.csv')
 recipient <- 'p5'
 ```
 
-**To:** Shah, Nirav <nirshah@med.umich.edu>
+**To:** Anesthetic, Jane \<dranesthetic@med.example.com\>
 
 **From:** mpog-quality@med.umich.edu
 
-**Subject:** You are below the goal for PONV 03
+**Subject:** Your performance dropped below the goal for PONV 03
 
 \  
 \  
 
-Dear Dr. Shaw,
+Dear Dr. Anesthetic,
 
-You fell below the goal for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+Your performance dropped below the goal for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
 ```{r figuregen, echo=FALSE, fig.align='center', fig.width=5, fig.height=3, fig.showtext=TRUE}
   # Run figure generation
