--- a/cards/card08.Rmd
+++ b/cards/card08.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "card 8"
+title: "email card 8"
 author: "DISPLAY Lab"
-date: "2020-03-23"
+date: "2020-03-28"
 mainfont: LiberationSerif
 sansfont: LiberationSans
 monofont: LiberationMono
@@ -31,18 +31,19 @@ goal_percent <- paste(100*goal_rate, "%", sep="")
 scaled_goal <- round(denominator*goal_rate, 1)
 ```
 
-**To:** Shah, Nirav <nirshah@med.umich.edu>
+**To:** Anesthetic, Jane \<dranesthetic@med.example.com\>
 
 **From:** mpog-quality@med.umich.edu
 
-**Subject:** You have reached the goal for PONV 03
+**Subject:** You may have an opportunity to improve PONV 03
 
 \  
 \  
 
-Dear Dr. Shaw,
+Dear Dr. Anesthetic,
 
-Your performance, `r numerator`/`r denominator`, for the measure, [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03), was below the goal of 90% (`r scaled_goal`/`r denominator`).
+You may have an opportunity to improve your performance for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+
 
 \  
 
