--- a/cards/card12.Rmd
+++ b/cards/card12.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "card 12"
+title: "email card 12"
 author: "DISPLAY Lab"
-date: "2020-03-23"
+date: "2020-03-28"
 mainfont: LiberationSerif
 sansfont: LiberationSans
 monofont: LiberationMono
@@ -31,7 +31,7 @@ goal_percent <- paste(100*goal_rate, "%", sep="")
 scaled_goal <- round(denominator*goal_rate, 1)
 ```
 
-**To:** Shah, Nirav <nirshah@med.umich.edu>
+**To:** Anesthetic, Jane \<dranesthetic@med.example.com\>
 
 **From:** mpog-quality@med.umich.edu
 
@@ -40,9 +40,9 @@ scaled_goal <- round(denominator*goal_rate, 1)
 \  
 \  
 
-Dear Dr. Shaw,
+Dear Dr. Anesthetic,
 
-Your performance, `r numerator`/`r denominator`, for the measure, [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03), was above the goal of 90% (`r scaled_goal`/`r denominator`).
+Your performance is above the 90% goal for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
 \  
 
