--- a/cards/card01.Rmd
+++ b/cards/card01.Rmd
@@ -22,20 +22,20 @@ source(file='fig_comp_line.R', local=card_env_A)
 
 # Load the source code for the figure of card B
 card_env_B <- new.env()
-source(file='fig_comp_line.R', local=card_env_B)
+source(file='fig_single_bar.R', local=card_env_B)
 
 # Load data and define recipient
 data <- pictoralist::read_data('synth_data.csv')
 recipient <- 'p2'
 ```
 
-<!-- CARD A -->
-**Card A**
+<!-- CARD 1A -->
+**Card 1A**
 \  
 
-Dear Dr. Shaw,
+Dear Dr. Anesthetic,
 
-You exceeded the peer average for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+You have become a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
 ```{r figureA, echo=FALSE, warning=FALSE, results='hide', fig.width=5, fig.height=3, fig.showtext=TRUE}
   # Run figure generation
@@ -43,6 +43,10 @@ You exceeded the peer average for the measure of [postoperative nausea and vomit
 ```
 
 \  
+
+A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
+
+More information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
 
 Sincerely,
 
@@ -52,13 +56,13 @@ The MPOG Quality Team
 ...
 \vspace{1.0cm}\ 
 
-<!-- CARD B -->
-**Card B**
+<!-- CARD 1B -->
+**Card 1B**
 \  
 
-Dear Dr. Shaw,
+Dear Dr. Anesthetic,
 
-You exceeded the peer average for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+You have become a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
 ```{r figureB, echo=FALSE, warning=FALSE, results='hide', fig.width=5, fig.height=3, fig.showtext=TRUE}
   # Run figure generation
@@ -66,6 +70,10 @@ You exceeded the peer average for the measure of [postoperative nausea and vomit
 ```
 
 \  
+
+A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
+
+More information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
 
 Sincerely,
 
