--- a/cards/card07.Rmd
+++ b/cards/card07.Rmd
@@ -16,33 +16,31 @@ geometry: top=2cm,bottom=1cm,left=3cm
 library(pictoralist)
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
-# Load the source code for the figure of card A
-card_env_A <- new.env()
-source(file='fig_comp_line.R', local=card_env_A)
+# No figure of card A
 
 # Load the source code for the figure of card B
 card_env_B <- new.env()
-source(file='fig_comp_line.R', local=card_env_B)
+source(file='fig_single_bar.R', local=card_env_B)
 
 # Load data and define recipient
 data <- pictoralist::read_data('synth_data.csv')
 recipient <- 'p5'
 ```
 
-<!-- CARD A -->
-**Card A**
+<!-- CARD 7A -->
+**Card 7A**
 \  
 
-Dear Dr. Shaw,
+Dear Dr. Anesthetic,
 
-You did not exceed the peer average for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+You are not a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03).
 
-```{r figureA, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=5, fig.height=5, fig.showtext=TRUE}
-  # Run figure generation
-  card_env_A$run(recipient, data, list())
-```
 
 \  
+
+A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
+
+Information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
 
 Sincerely,
 
@@ -52,20 +50,24 @@ The MPOG Quality Team
 ...
 \vspace{1.0cm}\ 
 
-<!-- CARD B -->
-**Card B**
+<!-- CARD 7B -->
+**Card 7B**
 \  
 
-Dear Dr. Shaw,
+Dear Dr. Anesthetic,
 
-You did not exceed the peer average for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+You are not a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
 ```{r figureB, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=5, fig.height=5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_A$run(recipient, data, list())
+  card_env_B$run(recipient, data, list())
 ```
 
 \  
+
+A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
+
+Information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
 
 Sincerely,
 
