--- a/cards/card12.Rmd
+++ b/cards/card12.Rmd
@@ -16,6 +16,13 @@ geometry: top=2cm,bottom=1cm,left=3cm
 library(pictoralist)
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
+
+# Load the source code for the figure of card A
+card_env_A <- new.env()
+source(file='fig_single_bar.R', local=card_env_A)
+
+# No figure for card B
+
 # Load data and define recipient
 # Use same performer as card 2
 data <- pictoralist::read_data('synth_data.csv')
@@ -31,15 +38,23 @@ goal_percent <- paste(100*goal_rate, "%", sep="")
 scaled_goal <- round(denominator*goal_rate, 1)
 ```
 
-<!-- CARD A -->
-**Card A**
+<!-- CARD 12A -->
+**Card 12A**
 \  
 
-Dear Dr. Shaw,
+Dear Dr. Anesthetic,
 
-Your performance, `r numerator`/`r denominator`, for the measure, [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03), was above the goal of 90% (`r scaled_goal`/`r denominator`).
+Congratulations on your high performance for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+```{r figureA, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=5, fig.height=5, fig.showtext=TRUE}
+  # Run figure generation
+  card_env_A$run(recipient, data, list())
+```
 
 \  
+
+A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
+
+More information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
 
 Sincerely,
 
@@ -49,15 +64,19 @@ The MPOG Quality Team
 ...
 \vspace{1.0cm}\ 
 
-<!-- CARD B -->
-**Card B**
+<!-- CARD 12B -->
+**Card 12B**
 \  
 
-Dear Dr. Shaw,
+Dear Dr. Anesthetic,
 
-Your performance, `r numerator`/`r denominator`, for the measure, [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03), was above the goal of 90% (`r scaled_goal`/`r denominator`).
+Congratulations on your high performance for the measure, [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03), `r numerator`/`r denominator`, which was above the goal of 90% (`r scaled_goal`/`r denominator`).
 
 \  
+
+A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
+
+More information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
 
 Sincerely,
 
