--- a/cards/card15.Rmd
+++ b/cards/card15.Rmd
@@ -20,22 +20,20 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 card_env_A <- new.env()
 source(file='fig_comp_line.R', local=card_env_A)
 
-# Load the source code for the figure of card B
-card_env_B <- new.env()
-source(file='fig_comp_line.R', local=card_env_B)
+# No figure for card B
 
 # Load data and define recipient (Use same performer as card 2)
 data <- pictoralist::read_data('synth_data.csv')
 recipient <- 'p13'
 ```
 
-<!-- CARD A -->
-**Card A**
+<!-- CARD 15A -->
+**Card 15A**
 \  
 
-Dear Dr. Shaw,
+Dear Dr. Anesthetic,
 
-You are performing below the peer average for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+You are not a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
 ```{r figureA, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=5, fig.height=5, fig.showtext=TRUE}
   # Run figure generation
@@ -43,6 +41,10 @@ You are performing below the peer average for the measure of [postoperative naus
 ```
 
 \  
+
+A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
+
+More information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
 
 Sincerely,
 
@@ -52,20 +54,20 @@ The MPOG Quality Team
 ...
 \vspace{1.0cm}\ 
 
-<!-- CARD B -->
-**Card B**
+<!-- CARD 15B -->
+**Card 15B**
 \  
 
-Dear Dr. Shaw,
+Dear Dr. Anesthetic,
 
-You are performing below the peer average for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+You are not a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03).
 
-```{r figureB, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=5, fig.height=5, fig.showtext=TRUE}
-  # Run figure generation
-  card_env_A$run(recipient, data, list())
-```
 
 \  
+
+A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
+
+More information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
 
 Sincerely,
 
