--- a/cards/card01.Rmd
+++ b/cards/card01.Rmd
@@ -9,12 +9,12 @@ output:
       in_header: "preamble.tex"
   html_document:
     theme: readable
-geometry: top=2cm,bottom=1cm,left=3cm
+geometry: top=0cm,bottom=0cm,left=3cm
 ---
 
 ```{r setup, include=FALSE}
 library(pictoralist)
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
 # Load the source code for the figure of card A
 card_env_A <- new.env()
@@ -30,19 +30,18 @@ recipient <- 'p2'
 ```
 
 <!-- CARD 1A -->
+\vspace{2.0cm}\ 
+
 **Card 1A**
-\  
 
 Dear Dr. Anesthetic,
 
 You have become a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
-```{r figureA, echo=FALSE, warning=FALSE, results='hide', fig.width=5, fig.height=3, fig.showtext=TRUE}
+```{r figureA, echo=FALSE, warning=FALSE, results='hide', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
   card_env_A$run(recipient, data, list())
 ```
-
-\  
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
 
@@ -52,24 +51,21 @@ Sincerely,
 
 The MPOG Quality Team
   
-\vspace{1.0cm}\ 
+\vspace{2.5cm} 
 ...
-\vspace{1.0cm}\ 
+\vspace{1.0cm} 
 
 <!-- CARD 1B -->
 **Card 1B**
-\  
 
 Dear Dr. Anesthetic,
 
 You have become a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
-```{r figureB, echo=FALSE, warning=FALSE, results='hide', fig.width=5, fig.height=3, fig.showtext=TRUE}
+```{r figureB, echo=FALSE, warning=FALSE, results='hide', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
   card_env_B$run(recipient, data, list())
 ```
-
-\  
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
 
