--- a/cards/card11.Rmd
+++ b/cards/card11.Rmd
@@ -9,7 +9,8 @@ output:
       in_header: "preamble.tex"
   html_document:
     theme: readable
-geometry: top=2cm,bottom=1cm,left=3cm
+geometry: top=0cm,bottom=0cm,left=3cm
+urlcolor: blue
 ---
 
 ```{r setup, include=FALSE}
@@ -28,14 +29,14 @@ recipient <- 'p9'
 ```
 
 <!-- CARD 11A -->
+\vspace{2.0cm}\ 
+
 **Card 11A**
-\  
 
 Dear Dr. Anesthetic,
 
 You are a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
-\  
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
 
@@ -45,24 +46,22 @@ Sincerely,
 
 The MPOG Quality Team
   
-\vspace{1.0cm}\ 
+\vspace{8.5cm} 
 ...
-\vspace{1.0cm}\ 
+\vspace{1.0cm} 
 
 <!-- CARD 11B -->
 **Card 11B**
-\  
 
 Dear Dr. Anesthetic,
 
 You are a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
-```{r figureB, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=5, fig.height=5, fig.showtext=TRUE}
+```{r figureB, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
   card_env_B$run(recipient, data, list())
 ```
 
-\  
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
 
