--- a/cards/card03.Rmd
+++ b/cards/card03.Rmd
@@ -9,7 +9,8 @@ output:
       in_header: "preamble.tex"
   html_document:
     theme: readable
-geometry: top=2cm,bottom=1cm,left=3cm
+geometry: top=0cm,bottom=0cm,left=3cm
+urlcolor: blue
 ---
 
 ```{r setup, include=FALSE}
@@ -21,6 +22,8 @@ card_env_A <- new.env()
 source(file='fig_single_bar.R', local=card_env_A)
 
 # No figure for card B
+#
+#
 
 # Load data and define recipient (Use same performer as card 2)
 data <- pictoralist::read_data('synth_data.csv')
@@ -28,19 +31,19 @@ recipient <- 'p2'
 ```
 
 <!-- CARD 3A -->
+\vspace{2.0cm}\ 
+
 **Card 3A**
-\  
 
 Dear Dr. Anesthetic,
 
 You are a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
-```{r figureA, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
+```{r figureA, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
   card_env_A$run(recipient, data, list())
 ```
 
-\  
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
 
@@ -50,19 +53,17 @@ Sincerely,
 
 The MPOG Quality Team
   
-\vspace{1.0cm}\ 
+\vspace{2.5cm} 
 ...
-\vspace{1.0cm}\ 
+\vspace{1.0cm} 
 
 <!-- CARD 3B -->
 **Card 3B**
-\  
 
 Dear Dr. Anesthetic,
 
 You are a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03).
 
-\  
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
 
