--- a/cards/card04.Rmd
+++ b/cards/card04.Rmd
@@ -9,7 +9,8 @@ output:
       in_header: "preamble.tex"
   html_document:
     theme: readable
-geometry: top=2cm,bottom=1cm,left=3cm
+geometry: top=0cm,bottom=0cm,left=3cm
+urlcolor: blue
 ---
 
 ```{r setup, include=FALSE}
@@ -17,6 +18,8 @@ library(pictoralist)
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
 # No figure for card A
+#
+#
 
 # Load the source code for the figure of card B
 card_env_B <- new.env()
@@ -37,19 +40,15 @@ denominator <- data[filter,'denom'][[1]]
 goal_percent <- paste(100*goal_rate, "%", sep="")
 scaled_goal <- round(denominator*goal_rate, 1)
 ```
-
-
-
-
 <!-- CARD 4A -->
+\vspace{2.0cm}\ 
+
 **Card 4A**
-\  
 
 Dear Dr. Anesthetic,
 
 Congratulations on your high performance, `r numerator`/`r denominator`, for the measure, [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03), which above the goal of 90% (`r scaled_goal`/`r denominator`).
 
-\  
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
 
@@ -59,25 +58,23 @@ Sincerely,
 
 The MPOG Quality Team
   
-\vspace{1.0cm}\ 
+\vspace{8.0cm} 
 ...
-\vspace{1.0cm}\ 
+\vspace{1.0cm} 
 
 <!-- CARD 4B -->
 **Card 4B**
-\  
 
 Dear Dr. Anesthetic,
 
 Congratulations on your high performance, `r numerator`/`r denominator`, for the measure, [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
-```{r figureB, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=5, fig.height=5, fig.showtext=TRUE}
+```{r figureB, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
   card_env_B$run(recipient, data, list())
 ```
 
 
-\  
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
 
