--- a/cards/card05.Rmd
+++ b/cards/card05.Rmd
@@ -9,7 +9,8 @@ output:
       in_header: "preamble.tex"
   html_document:
     theme: readable
-geometry: top=2cm,bottom=1cm,left=3cm
+geometry: top=0cm,bottom=0cm,left=3cm
+urlcolor: blue
 ---
 
 ```{r setup, include=FALSE}
@@ -30,19 +31,19 @@ recipient <- 'p5'
 ```
 
 <!-- CARD 5A -->
+\vspace{2.0cm}\ 
+
 **Card 5A**
-\  
 
 Dear Dr. Anesthetic,
 
 You are no longer a top performer for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
-```{r figureA, echo=FALSE, warning=FALSE, results='hide', fig.width=5, fig.height=3, fig.showtext=TRUE}
+```{r figureA, results='hide', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
   card_env_A$run(recipient, data, list())
 ```
 
-\  
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
 
@@ -52,24 +53,22 @@ Sincerely,
 
 The MPOG Quality Team
   
-\vspace{1.0cm}\ 
+\vspace{2.5cm} 
 ...
-\vspace{1.0cm}\ 
+\vspace{1.0cm} 
 
 <!-- CARD 5B -->
 **Card 5B**
-\  
 
 Dear Dr. Anesthetic,
 
 You are no longer a top performer for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
-```{r figureB, echo=FALSE, warning=FALSE, results='hide', fig.width=5, fig.height=3, fig.showtext=TRUE}
+```{r figureB, results='hide', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
   card_env_A$run(recipient, data, list())
 ```
 
-\  
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
 
