--- a/cards/card08.Rmd
+++ b/cards/card08.Rmd
@@ -9,7 +9,8 @@ output:
       in_header: "preamble.tex"
   html_document:
     theme: readable
-geometry: top=2cm,bottom=1cm,left=3cm
+geometry: top=0cm,bottom=0cm,left=3cm
+urlcolor: blue
 ---
 
 ```{r setup, include=FALSE}
@@ -38,19 +39,19 @@ scaled_goal <- round(denominator*goal_rate, 1)
 ```
 
 <!-- CARD 8A -->
+\vspace{2.0cm}\ 
+
 **Card 8A**
-\  
 
 Dear Dr. Anesthetic,
 
 You may have an opportunity to improve your performance for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
-```{r figureA, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=5, fig.height=5, fig.showtext=TRUE}
+```{r figureA, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
   card_env_A$run(recipient, data, list())
 ```
 
-\  
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
 
@@ -60,19 +61,17 @@ Sincerely,
 
 The MPOG Quality Team
   
-\vspace{1.0cm}\ 
+\vspace{2.0cm} 
 ...
-\vspace{1.0cm}\ 
+\vspace{1.0cm} 
 
 <!-- CARD 8B -->
 **Card 8B**
-\  
 
 Dear Dr. Anesthetic,
 
 You may have an opportunity to improve your performance for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03). This month your performance was `r numerator`/`r denominator`, below the goal of 90% (`r scaled_goal`/`r denominator`).
 
-\  
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
 
