--- a/cards/card10.Rmd
+++ b/cards/card10.Rmd
@@ -41,7 +41,7 @@ Your performance is consistently high for the measure [postoperative nausea and 
 
 ```{r figureA, echo=FALSE, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_A$run(recipient, data)
+  card_env_A$run(recipient, data, "GOAL")
 ```
 
 
@@ -66,7 +66,7 @@ Your performance is consistently high for the measure [postoperative nausea and 
 
 ```{r figureB, echo=FALSE, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_B$run(recipient, data)
+  card_env_B$run(recipient, data, "GOAL")
 ```
 
 
