--- a/cards/card16.Rmd
+++ b/cards/card16.Rmd
@@ -68,7 +68,7 @@ You may have an opportunity to improve your performance for the measure, [postop
 
 ```{r figureB, fig.align='center', fig.width=4, fig.height=2.5, fig.showtext=TRUE}
   # Run figure generation
-  card_env_B$run(recipient, data)
+  card_env_B$run(recipient, data, "GOAL")
 ```
 
 A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
