Remove debugging line.

--- a/cards/preamble.tex
+++ b/cards/preamble.tex
@@ -4,7 +4,7 @@
 \renewcommand{\headrulewidth}{0pt} % get rid of header line
 
 % Debugging line drawn across middle of page
-\usepackage{eso-pic}
-\usepackage{blindtext}
-\AddToShipoutPictureBG{%
-    \AtTextCenter{\hspace{-0.6\textwidth}\rule{1.2\textwidth}{0.5pt}}}
+%\usepackage{eso-pic}
+%\usepackage{blindtext}
+%\AddToShipoutPictureBG{%
+%    \AtTextCenter{\hspace{-0.6\textwidth}\rule{1.2\textwidth}{0.5pt}}}
