--- a/cards/card02.Rmd
+++ b/cards/card02.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
 # Load the source code for the figure of card A
 card_env_A <- new.env()
-source(file='fig_single_bar.R', local=card_env_A)
+source(file='fig_comp_bar.R', local=card_env_A)
 
 # Load the source code for the figure of card B
 card_env_B <- new.env()
