--- a/cards/card09.Rmd
+++ b/cards/card09.Rmd
@@ -23,7 +23,7 @@ source(file='fig_comp_line.R', local=card_env_A)
 
 # Load the source code for the figure of card B
 card_env_B <- new.env()
-source(file='fig_single_bar.R', local=card_env_B)
+source(file='fig_comp_bar.R', local=card_env_B)
 
 # Load data and define recipient
 data <- pictoralist::read_data('synth_data.csv')
