--- a/cards/card16.Rmd
+++ b/cards/card16.Rmd
@@ -47,13 +47,7 @@ Dear Dr. Anesthetic,
 
 You may have an opportunity to improve your performance for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03), which was `r numerator`/`r denominator`, below the goal of 90% (`r scaled_goal`/`r denominator`).
 
-A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
-
-More information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
-
-Sincerely,
-
-The MPOG Quality Team
+\signoff
   
 \vspace{8.0cm} 
 ...
@@ -71,10 +65,4 @@ You may have an opportunity to improve your performance for the measure, [postop
   card_env_B$run(recipient, data, "GOAL")
 ```
 
-A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
-
-More information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
-
-Sincerely,
-
-The MPOG Quality Team
+\signoff
