--- a/cards/card01.Rmd
+++ b/cards/card01.Rmd
@@ -44,14 +44,8 @@ You have become a top performer this month for the measure [postoperative nausea
   card_env_A$run(recipient, data, "Peer Ave.")
 ```
 
-A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
+\signoff
 
-More information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
-
-Sincerely,
-
-The MPOG Quality Team
-  
 \vspace{2.5cm} 
 ...
 \vspace{1.0cm} 
@@ -68,10 +62,4 @@ You have become a top performer this month for the measure [postoperative nausea
   card_env_B$run(recipient, data, "Peer Ave.")
 ```
 
-A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
-
-More information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
-
-Sincerely,
-
-The MPOG Quality Team
+\signoff
