--- a/cards/card15.Rmd
+++ b/cards/card15.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
 # Load the source code for the figure of card A
 card_env_A <- new.env()
-source(file='fig_one_line.R', local=card_env_A)
+source(file='fig_one_bar.R', local=card_env_A)
 
 # No figure for card B
 
@@ -42,14 +42,7 @@ You are not a top performer this month for the measure [postoperative nausea and
   card_env_A$run(recipient, data, "Peer Ave.")
 ```
 
-
-A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
-
-More information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
-
-Sincerely,
-
-The MPOG Quality Team
+\signoff
   
 \vspace{2.5cm} 
 ...
@@ -62,10 +55,4 @@ Dear Dr. Anesthetic,
 
 You are not a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03).
 
-A case-by-case breakdown of your results are available at your [clinical quality dashboard](https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4).
-
-More information about the rationale for the measure PONV 03 and how it is calculated [are available here](https://spec.mpog.org/Spec/Public/33).
-
-Sincerely,
-
-The MPOG Quality Team
+\signoff
