--- a/cards/preamble.tex
+++ b/cards/preamble.tex
@@ -1,10 +1,28 @@
+\usepackage{hyperref}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{} % sets both header and footer to nothing
 \renewcommand{\headrulewidth}{0pt} % get rid of header line
+\setlength{\parindent}{0pt} % Remove paragraph indentation
+\hypersetup{
+  linkcolor=blue,
+  urlcolor=blue
+}
 
 % Debugging line drawn across middle of page
 %\usepackage{eso-pic}
 %\usepackage{blindtext}
 %\AddToShipoutPictureBG{%
 %    \AtTextCenter{\hspace{-0.6\textwidth}\rule{1.2\textwidth}{0.5pt}}}
+
+
+% Macro for sign off content.
+\newcommand{\signoff}{
+A case-by-case breakdown of your results are available at your \href{https://www.aspirecqi.org/HIEBus/identityserver/local/login?signInId=2b0fc382a1904b699377c926723c9eb4}{clinical quality dashboard}.
+
+More information about the rationale for the measure PONV 03 and how it is calculated \href{https://spec.mpog.org/Spec/Public/33}{are available here}.
+
+Sincerely,
+
+The MPOG Quality Team
+}
