--- a/cards/card05.Rmd
+++ b/cards/card05.Rmd
@@ -35,7 +35,7 @@ recipient <- 'p5'
 
 **Card 5A**
 
-Dear Dr. Anesthetic,
+Dear Alex,
 
 You are no longer a top performer for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
@@ -53,7 +53,7 @@ You are no longer a top performer for the measure [postoperative nausea and vomi
 <!-- CARD 5B -->
 **Card 5B**
 
-Dear Dr. Anesthetic,
+Dear Alex,
 
 You are no longer a top performer for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
