--- a/cards/card08.Rmd
+++ b/cards/card08.Rmd
@@ -43,7 +43,7 @@ scaled_goal <- round(denominator*goal_rate, 1)
 
 **Card 8A**
 
-Dear Dr. Anesthetic,
+Dear Alex,
 
 You may have an opportunity to improve your performance for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
@@ -61,7 +61,7 @@ You may have an opportunity to improve your performance for the measure [postope
 <!-- CARD 8B -->
 **Card 8B**
 
-Dear Dr. Anesthetic,
+Dear Alex,
 
 You may have an opportunity to improve your performance for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03). This month your performance was `r numerator`/`r denominator`, below the goal of 90% (`r scaled_goal`/`r denominator`).
 
