--- a/cards/card11.Rmd
+++ b/cards/card11.Rmd
@@ -33,7 +33,7 @@ recipient <- 'p9'
 
 **Card 11A**
 
-Dear Dr. Anesthetic,
+Dear Alex,
 
 You are a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
@@ -46,7 +46,7 @@ You are a top performer this month for the measure [postoperative nausea and vom
 <!-- CARD 11B -->
 **Card 11B**
 
-Dear Dr. Anesthetic,
+Dear Alex,
 
 You are a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
