--- a/cards/card03.Rmd
+++ b/cards/card03.Rmd
@@ -35,7 +35,7 @@ recipient <- 'p2'
 
 **Card 3A**
 
-Dear Dr. Anesthetic,
+Dear Alex,
 
 You are a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
@@ -53,7 +53,7 @@ You are a top performer this month for the measure [postoperative nausea and vom
 <!-- CARD 3B -->
 **Card 3B**
 
-Dear Dr. Anesthetic,
+Dear Alex,
 
 You are a top performer this month for the measure [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03).
 
