--- a/cards/card04.Rmd
+++ b/cards/card04.Rmd
@@ -45,7 +45,7 @@ scaled_goal <- round(denominator*goal_rate, 1)
 
 **Card 4A**
 
-Dear Dr. Anesthetic,
+Dear Alex,
 
 Congratulations on your high performance, `r numerator`/`r denominator`, for the measure, [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03), which above the goal of 90% (`r scaled_goal`/`r denominator`).
 
@@ -58,7 +58,7 @@ Congratulations on your high performance, `r numerator`/`r denominator`, for the
 <!-- CARD 4B -->
 **Card 4B**
 
-Dear Dr. Anesthetic,
+Dear Alex,
 
 Congratulations on your high performance, `r numerator`/`r denominator`, for the measure, [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
