--- a/cards/card14.Rmd
+++ b/cards/card14.Rmd
@@ -35,7 +35,7 @@ recipient <- 'p13'
 
 **Card 14A**
 
-Dear Dr. Anesthetic,
+Dear Alex,
 
 Your performance has not improved for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
@@ -53,7 +53,7 @@ Your performance has not improved for the measure of [postoperative nausea and v
 <!-- CARD 14B -->
 **Card 14B**
 
-Dear Dr. Anesthetic,
+Dear Alex,
 
 Your performance has not improved for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
